fix whitespace and uneven margins for two-column.html

--- a/css/styles.css
+++ b/css/styles.css
@@ -458,7 +458,7 @@ for easier screen-shotting to make PNGs.
 
 #preview-page .halfbloc, #two-column .halfbloc {
   width: 47%;
-  margin: 0 1% 1% 1%;
+  margin: 0 1% 2% 1%;
 }
 
 #preview-page h2.marker {
